fix: fixed overflow-x for body to make header actually fixed to the top

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,6 @@ body {
   font-family: var(--font-sans);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
 }
 
 html {
